test/invalid/idl/extattr-wrong-rhs.widl
[IntAttr=0, FloatAttr=3.14, StringAttr="abc"]
interface IdInterface {};
